ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: alb-ingress
   namespace: web-server
   annotations:
      kubernetes.io/ingress.class: alb
      alb.ingress.kubernetes.io/scheme: internet-facing
   labels:
      app: ab-ing
spec:
  rules:
  - http:
      paths:
      - backend:
           service:
              name: ssl-redirect
              port:
                name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend: 
           service:
             name: nginx
           port:
             number: 80
        path: /*
        pathType: ImplementationSpecific
